fixed alignment of form in contact details

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,7 @@ main {
     background-color: #4F772D;
     margin: 2em;
     line-height: 27px;
+    max-height: fit-content;
 }
 
 /*Events images*/
@@ -529,15 +530,13 @@ footer {
     }
 
     #contact_us_form {
-        align-self: auto;
         padding: 1em;
         top: 1em;
-        border-radius: 1em;
-        margin: 1em;
+        margin: 1em auto;
         display: flex;
         position: relative;
         flex-wrap: wrap;
-        flex-grow: 1;
+        max-width: fit-content;
     }
 
     #contact_details {
